Fix side nav on smaller screens, Add side nav dropdown

--- a/res/styles/index.css
+++ b/res/styles/index.css
@@ -120,42 +120,6 @@ header {
     margin-top: 10px;
 }
 
-/* Footer */
-footer {
-    padding: 3em 4em;
-    height: auto;
-    color: white;
-    background-color: rgb(0, 119, 190);
-    color: rgb(219, 207, 168);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    font-size: 1.1em;
-}
-
-footer p {
-    margin: 0 0 15px;
-}
-
-footer a {
-    display: block;
-    margin: 0 0 15px;
-    color: rgb(219, 207, 168);
-    text-decoration: underline;
-}
-
-footer .container{
-    padding: 0 2em;
-}
-
-footer .icons a {
-    display: inline;
-}
-
-footer .icons {
-    margin: 15px 0;
-}
-
 @media only screen and (orientation: portrait), (max-width: 768px) {
     .blog-posts {
         display: block;
