--- a/res/styles/nav.css
+++ b/res/styles/nav.css
@@ -8,7 +8,6 @@
     align-items: center;
     z-index: 10;
     position: absolute;
-    border-bottom: 2px solid red;
 }
 
 #home-btn {
@@ -28,7 +27,7 @@
 }
 
 .top-nav .links a{
-    color: rgb(15, 126, 83);
+    color: white;
     margin: 20px;
 }
 
@@ -38,12 +37,13 @@ nav .container {
     cursor: pointer;
     margin-right: 20px;
     display: none;
+    z-index: 10;
 }
 
 .bar1, .bar2, .bar3 {
     width: 35px;
     height: 5px;
-    background-color: #333;
+    background-color: white;
     margin: 6px 0;
     transition: 0.4s;
 }
@@ -65,8 +65,80 @@ nav .container {
     transform: rotate(45deg) translate(-8px, -8px) ;
 }
 
+
+/* The sidenav menu */
+.sidenav {
+    height: 100%; /* Specify a height */
+    width: 0px; /* 0 width - change this with JavaScript */
+    position: fixed;
+    z-index: 1; 
+    top: 0px; /* Stay on top */
+    right: 0;
+    background-color: #111; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 70px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+  
+/* The sidenav links */
+/* .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+} */
+
+/* Style the sidenav links and the dropdown button */
+.sidenav a, .dropdown-btn {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+    border: none;
+    background: none;
+    width:100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+    white-space: nowrap;
+}
+  
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover, .dropdown-btn:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .dropdown-container {
+    display: none;
+    background-color: #262626;
+    padding-left: 8px;
+}
+
+.active {
+    background-color: blue;
+    color: white;
+}
+
+.fa-caret-down {
+    padding: 0 2px;    
+}
+
 @media only screen and (orientation: portrait) {
     nav .container {
         display: inline-block;
     }
+
+    .land-links {
+        display: none;
+    }
 }
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+  
