--- a/res/styles/test.css
+++ b/res/styles/test.css
@@ -14,148 +14,23 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-/* Upper Nav */
-nav {
-    background-color: #333;
-    height: 70px;
-    width: 100%;
-    position: fixed;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 10;
-}
-
-#home-btn {
+a {
     text-decoration: none;
-    color: white;
-    margin-left: 20px;
 }
 
-#search-bar {
-    max-width: 50%;
-    height: 50%;
-    font-size: 1.3em;
-    flex-grow: 1;
-    margin: 70px;
-}
-
-nav .links a{
-    text-decoration: none;
-    color: white;
-    margin: 20px;
-}
 /* Banner */
 header {
     height: 100%;
 }
 
-#banner {
-    padding-top: 70px;
+.banner {
     height: 100%;
 
-    background-image: url("../images/portrait.jpg");
+    background-image: url("../images/fred-kearney-rmxlMmbgQAk-unsplash.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-
-
-/* Test */
-/* Slideshow container */
-.slideshow-container {
-    max-width: 100%;
-    /* position: relative; */
-    margin: auto;
-  }
-  
-  /* Hide the images by default */
-  .mySlides {
-    display: none;
-  }
-  
-  /* Next & previous buttons */
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  /* Caption text */
-  header .text {
-    color: #f2f2f2;
-    font-size: 3rem;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 50px;
-    width: 100%;
-    text-align: center;
-  }
-  
-  /* The dots/bullets/indicators */
-  .dot {
-    position: relative;
-    bottom: 50px;
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-  
-  .active, .dot:hover {
-    background-color: #717171;
-  }
-  
-  /* Fading animation */
-  .fade {
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
-  
-  @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
-/* End of Test */
-
-
-
-/* Header */
-/* header img {
-    width: 100%;
-    height: 100%;
-} */
 
 /* Middle Nav */
 .link-buttons {
@@ -164,7 +39,6 @@ header {
 
 .link-buttons a {
     width: 80%;
-    text-decoration: none;
     font-size: 5rem;
     display: block;
     padding: 5% 0;
@@ -241,18 +115,45 @@ header {
 }
 
 #read-more {
-    display: inline-block; 
-    text-decoration: none;
+    display: inline-block;
     font-style: italic;
     margin-top: 10px;
 }
 
 /* Footer */
 footer {
-    padding: 1em;
-    height: 10em;
+    padding: 3em 4em;
+    height: auto;
     color: white;
-    background-color: #111;
+    background-color: rgb(0, 119, 190);
+    color: rgb(219, 207, 168);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    font-size: 1.1em;
+}
+
+footer p {
+    margin: 0 0 15px;
+}
+
+footer a {
+    display: block;
+    margin: 0 0 15px;
+    color: rgb(219, 207, 168);
+    text-decoration: underline;
+}
+
+footer .container{
+    padding: 0 2em;
+}
+
+footer .icons a {
+    display: inline;
+}
+
+footer .icons {
+    margin: 15px 0;
 }
 
 @media only screen and (orientation: portrait), (max-width: 768px) {
@@ -265,6 +166,10 @@ footer {
     .col {
         margin: 20px;
     }
+
+    .top-nav .links a{
+        display: none;
+    }
 }
 
 @media only screen and (orientation: portrait) {
@@ -273,28 +178,3 @@ footer {
         font-size: 4rem;
     }
 }
-
-/* /* Footer */
-footer {
-    padding: 2em 4em;
-    height: auto;
-    color: white;
-    background-color: rgb(39, 127, 185);
-    color: rgb(241, 209, 181);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-footer p {
-    margin: 0 0 15px;
-}
-
-footer a {
-    display: block;
-    margin: 0 0 15px;
-}
-
-footer .container{
-    padding: 0 1em;
-} 
